# zephyrus

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  version.cpp.in
cmake/: dependencies.cmake  deps.cmake
include/zephyrus/: log.hpp  version.hpp  zephyrus.hpp
include/zephyrus/platform/: detection.hpp  extern.hpp
include/zephyrus/rmlui/: cmrc_file_interface.hpp  rmlui.hpp
src/: zephyrus_acr.cpp  zephyrus_standalone.cpp
src/zephyrus/: log.cpp  version.cpp  zephyrus.cpp  zephyrus_acr.cpp  zephyrus_standalone.cpp
src/zephyrus/rmlui/: cmrc_file_interface.cpp  rmlui.cpp
test/zephyrus/rmlui/: cmrc_file_interface_test.cpp  cmrc_file_interface_thread_test.cpp
